# fastdogs

./: README.md  default.nix  fastdogs.cabal  haskdogs.cabal
src/: Main.hs
