Name:                fastdogs
Version:             0.6.0
Synopsis:            Generate tags file for Haskell project and its nearest deps
Homepage:            http://github.com/effectfully/fastdogs
License:             BSD3
License-file:        LICENSE
Author:              Sergey Mironov, effectfully
Maintainer:          effectfully@gmail.com
Category:            Development
Build-type:          Simple
cabal-version:       1.22
extra-source-files:  README.md
Description:
    Warning: this is a very quick-and-dirty port of `haskdogs` to `fast-tags`.

    `fastdogs` is a 300-lines tool which creates tag file for entire Haskell
    project directory. It takes into account first-level dependencies by
    recursively scanning imports and adding matching packages to the final tag
    list.

    As a result, programmer can use his/her text editor supporting tags (vim,
    for example) to jump directly to definition of any standard or foreign
    function he/she uses.

    Note, that fastdogs calls some Unix shell commands like 'grep' so this tool
    will likely fail to work on pure Windows platforms.

Executable fastdogs
  Default-language:    Haskell2010
  other-modules:        Paths_fastdogs
  Hs-source-dirs:       src
  Main-is:              Main.hs
  Build-depends:        base >= 4.8 && < 5
                      , filepath
                      , text
                      , directory
                      , optparse-applicative
                      , process-extras
                      , containers
                      , hasktags

  Ghc-options:          -fwarn-tabs

Source-repository head
  Type:     git
  Location: http://github.com/effectfully/fastdogs
